--- a/main.html
+++ b/main.html
@@ -10,6 +10,17 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<ol>
+		<li data-ns-test="shoppingList">Phone</li>
+		<li data-ns-test="shoppingList">Watch</li>
+		<li data-ns-test="shoppingList">Car</li>
+	</ol>
+
+	<ul>
+		<li data-ns-test="holidayList">Kerala</li>
+		<li data-ns-test="holidayList">Ladakh</li>
+		<li data-ns-test="holidayList">Europe</li>
+	</ul>
 
 </body>
 
